compiler/src/test/resources/amyc/typer/failing/SeqError1.amy
module SeqError
  1 + true; false
end SeqError
